--- a/SGASE/nbproject/private/private.properties
+++ b/SGASE/nbproject/private/private.properties
@@ -1,1 +1,4 @@
+compile.on.save=true
+user.properties.file=C:\\Users\\Genesis\\AppData\\Roaming\\NetBeans\\8.0.1\\build.properties
+
 user.properties.file=C:\\Users\\Gustavo\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
