--- a/SGASE/nbproject/project.properties
+++ b/SGASE/nbproject/project.properties
@@ -53,7 +53,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=sgase.SGASE
+main.class=br.com.ufc.es.poo.exec.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
